--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -29,7 +29,7 @@ jobs:
 
     - name: Run the Python script
       run: |
-        python your_script.py
+        python combine_m3u.py
 
     - name: Commit and push changes
       run: |
