--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -27,13 +27,22 @@ jobs:
       run: |
         python nm3u.py
 
-    - name: Commit and push changes
+    - name: Download and concatenate m3u files for iplive
       run: |
-        git config --local user.email "actions@github.com"
-        git config --local user.name "GitHub Actions"
-        git add combined_cleaned.m3u
-        git add iplive.m3u
-        git commit -m "Update combined_cleaned.m3u with new valid URLs"
+        curl https://iptv-org.github.io/iptv/languages/zho.m3u > zho.m3u
+        curl https://iptv-org.github.io/iptv/languages/jpn.m3u > jpn.m3u
+        curl https://iptv-org.github.io/iptv/languages/eng.m3u > eng.m3u
+        curl https://iptv-org.github.io/iptv/languages/undefined.m3u > undefined.m3u
+        cat zho.m3u jpn.m3u eng.m3u undefined.m3u > iplive.m3u
+
+    - name: Combine all m3u files
+      run: |
+        cat combined_cleaned.m3u all0.m3u > all.m3u  # Combine processed channels into all.m3u
+
+    - name: Commit changes
+      run: |
+        git config --local user.email "your-email@example.com"
+        git config --local user.name "Your Name"
+        git add combined_cleaned.m3u iplive.m3u migu.m3u all.m3u
+        git commit -m "Update m3u files with processed data"
         git push
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
