--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -39,6 +39,6 @@ jobs:
       run: |
         git config --local user.email "your-email@example.com"
         git config --local user.name "Your Name"
-        git add combined_cleaned.m3u iplive.m3u migu.m3u all.m3u
+        git add combined_cleaned.m3u iplive.m3u migu.m3u
         git commit -m "Update m3u files with processed data"
         git push
