--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -34,11 +34,16 @@ jobs:
         curl https://iptv-org.github.io/iptv/languages/eng.m3u > eng.m3u
         curl https://iptv-org.github.io/iptv/languages/undefined.m3u > undefined.m3u
         cat zho.m3u jpn.m3u eng.m3u undefined.m3u > iplive.m3u
-
+        
+    - name: Run JP script
+      run: |
+        grep -A1 '.jp"' combined_cleaned.m3u >jp.m3u
+        python grouptitle.py
+        cat itv_p.m3u migu.m3u all0.m3u jp.m3u >allback.m3u
     - name: Commit changes
       run: |
         git config --local user.email "your-email@example.com"
         git config --local user.name "Your Name"
-        git add combined_cleaned.m3u iplive.m3u migu.m3u
+        git add combined_cleaned.m3u iplive.m3u migu.m3u jp.m3u allback.m3u
         git commit -m "Update m3u files with processed data"
         git push
