--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -23,6 +23,12 @@ jobs:
         python -m pip install --upgrade pip
         pip install requests
 
+    - name: Download and concatenate m3u files for iplive
+      run: |
+        curl https://assets.livednow.com/epg.xml > epg.xml
+        curl https://raw.githubusercontent.com/shdejavu/epg/master/guide.xml >jp.xml
+        python epgmerge.py
+
     - name: Run M3U processing script
       run: |
         python nm3u.py
@@ -44,6 +50,7 @@ jobs:
       run: |
         git config --local user.email "your-email@example.com"
         git config --local user.name "Your Name"
+        git add guide.xml
         git add combined_cleaned.m3u iplive.m3u migu.m3u jp.m3u allback.m3u
         git commit -m "Update m3u files with processed data"
         git push
